# logtui

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  main.py  original_pty_interceptor.py  pyproject.toml  pytest.ini  ruff.toml
docs/: implementation-status.md  sentry-devserver-tui-log-viewer-feasibility.md
src/sentry_tui/: __init__.py  app.py  constants.py  dummy_app.py  log_processing.py  process_monitor.py  pty_core.py  pty_interceptor.py  ui_components.py  utils.py
tests/: __init__.py  conftest.py  test_integration.py  test_log_filtering.py  test_log_line.py  test_pty_interceptor.py  test_sentry_tui_app.py
