[project]
name = "sentry-tui"
version = "0.1.0"
description = "TUI for intercepting and filtering Sentry devserver logs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=4.0.0",
    "textual-dev>=1.7.0",
]

[project.scripts]
sentry-tui = "sentry_tui:main"
dummy-app = "sentry_tui.dummy_app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "ty>=0.0.1a14",
]
